--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
         </div>
 
         <li>Initial Message with CTA</li>
-        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy now!".
+        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy now!".</p>
+        <div class='call-to-action-container'>
+          <div class='business-name-header'>Acme Corp</div>
+          <input class='business-name-input' placeholder='Acme Corp'>
+          <textarea class='call-to-action-header' placeholder='Enter a Heading' maxlength="160"></textarea>
+        </div>
+
+        <li>Message Carousel</li>
+        <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
 
       </ol>
     </div>
@@ -74,11 +82,19 @@
         <div class='get-started-img-container'>
           <div class='business-name-header'>Acme Corp</div>
           <input class='business-name-input' placeholder='Acme Corp'>
-          <textarea class='get-started-text' placeholder='We are a cool company. Chat with us.'></textarea>
+          <textarea class='get-started-text' placeholder='We are a cool company. Chat with us.' maxlength="160"></textarea>
         </div>
 
         <li>Initial Message with CTA</li>
-        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Get a quote".
+        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Get a quote".</p>
+        <div class='call-to-action-container'>
+          <div class='business-name-header'>Acme Corp</div>
+          <input class='business-name-input' placeholder='Acme Corp'>
+          <textarea class='call-to-action-header' placeholder='Enter a Heading'></textarea>
+        </div>
+        
+        <li>Message Carousel</li>
+        <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
 
       </ol>
     </div>
