new inital msg image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <li>Initial Message with CTA</li>
-        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy now!".
+        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy now!".</p>
 
       </ol>
     </div>
@@ -78,7 +78,7 @@
         </div>
 
         <li>Initial Message with CTA</li>
-        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Get a quote".
+        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Get a quote".</p>
 
       </ol>
     </div>
