--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   <!-- CSS
@@ -64,10 +63,15 @@
         <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy now!".</p>
         <div class='call-to-action-container'>
           <div class='business-name-header'>Acme Corp</div>
-          <textarea class='call-to-action-title' placeholder='Enter a Heading' maxlength="80"></textarea>
-          <textarea class='call-to-action-button ' placeholder='Button Title' maxlength="20"></textarea>
-          <textarea class='call-to-action-button button2' placeholder='Button Title' maxlength="20"></textarea>
-          <textarea class='call-to-action-button button3' placeholder='Button Title' maxlength="20"></textarea>
+          <div class='call-to-action-image'></div>
+          <div class ='call-to-action-title-encapsulate'>
+            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="call-to-action-button-encapsulate">
+            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
         </div>
 
         <li>Message Carousel</li>
