Added carousel elements

--- a/index.html
+++ b/index.html
@@ -76,7 +76,39 @@
 
         <li>Message Carousel</li>
         <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
-
+        <div class='carousel-container'>
+          <div class='carousel-image'></div>
+          <div class ='carousel-title-encapsulate'>
+            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="carousel-button-encapsulate">
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
+        </div>
+        <div class='carousel-container'>
+          <div class='carousel-image'></div>
+          <div class ='carousel-title-encapsulate'>
+            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="carousel-button-encapsulate">
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
+        </div>
+        <div class='carousel-container'>
+          <div class='carousel-image'></div>
+          <div class ='carousel-title-encapsulate'>
+            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="carousel-button-encapsulate">
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
+        </div>
       </ol>
     </div>
 
@@ -95,11 +127,52 @@
         <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Get a quote".</p>
         <div class='call-to-action-container'>
           <div class='business-name-header'>Acme Corp</div>
-          <textarea class='call-to-action-title' placeholder='Enter a Heading' maxlength="80"></textarea>
+          <div class='call-to-action-image'></div>
+          <div class ='call-to-action-title-encapsulate'>
+            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="call-to-action-button-encapsulate">
+            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
         </div>
         
         <li>Message Carousel</li>
         <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
+        <div class='carousel-container'>
+          <div class='carousel-image'></div>
+          <div class ='carousel-title-encapsulate'>
+            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="carousel-button-encapsulate">
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
+        </div>
+        <div class='carousel-container'>
+          <div class='carousel-image'></div>
+          <div class ='carousel-title-encapsulate'>
+            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="carousel-button-encapsulate">
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
+        </div>
+        <div class='carousel-container'>
+          <div class='carousel-image'></div>
+          <div class ='carousel-title-encapsulate'>
+            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          </div>
+          <div class="carousel-button-encapsulate">
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          </div>
+        </div>
 
       </ol>
     </div>
