Added titles for post CTA step

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
           </div>
         </div>
+
+        <li>Post CTA</li>
       </ol>
     </div>
 
@@ -174,7 +176,16 @@
           </div>
         </div>
 
+        <li>Post CTA</li>
       </ol>
+    </div>
+
+    <div class="row objective u-max-full-width">
+      <p>Send a message to your users acknowledging their action and describing next steps. Select your message type:</p>
+      <select class="u-max-full-width message-template-dropdown">
+        <option value="generic-template">Generic Template</option>
+        <option value="plain-text">Plain Text</option>
+      </select>
     </div>
 
   </div>
