Changed button titles for product sales bot

--- a/index.html
+++ b/index.html
@@ -140,38 +140,38 @@
           </div>
         </div>
         
-        <li>Message Carousel</li>
-        <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
+        <li>Product Carousel</li>
+        <p>Use a carousel of messages to provide your users with products to purchase and add to cart buttons.</p>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Product Title' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' maxlength="20">Add To Cart</textarea>
+            <textarea class='carousel-button' maxlength="20">Similair Products</textarea>
             <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Product Title' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' maxlength="20">Add To Cart</textarea>
+            <textarea class='carousel-button' maxlength="20">Similair Products</textarea>
             <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Product Title' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' maxlength="20">Add To Cart</textarea>
+            <textarea class='carousel-button' maxlength="20">Similair Products</textarea>
             <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
           </div>
         </div>
