--- a/index.html
+++ b/index.html
@@ -176,6 +176,26 @@
           </div>
         </div>
 
+        <li>Checkout Cart</li>
+        <p>This is the template that the user sees for products in their cart when they are ready to checkout.</p>
+        <div class="text-center">
+          <div class='carousel-container'>
+            <div class='carousel-image'></div>
+            <div class ='carousel-title-encapsulate'>
+              <textarea class='carousel-title' placeholder='Product Name (Quantity x Price)' rows= '1' maxlength="80"></textarea>
+            </div>
+            <div class="carousel-button-encapsulate">
+              <textarea class='carousel-button' maxlength="20">Remove From Cart</textarea>
+              <textarea class='carousel-button' maxlength="20">+ Increase Quantity</textarea>
+              <textarea class='carousel-button' maxlength="20">- Reduce Quantity</textarea>
+            </div>
+          </div>
+        </div>
+        <div class="row purchase text-center">
+          <textarea class='plain-text-area' placeholder='Enter a message... (i.e. "Thanks for your order!"' rows= '2' maxlength="80"></textarea>
+          <textarea class='carousel-button' maxlength="20">Pay For Order</textarea>
+        </div>
+
         <li>Post CTA</li>
       </ol>
     </div>
