Fixed Purchase Prompt

--- a/index.html
+++ b/index.html
@@ -191,9 +191,11 @@
             </div>
           </div>
         </div>
-        <div class="row purchase text-center">
-          <textarea class='plain-text-area' placeholder='Enter a message... (i.e. "Thanks for your order!"' rows= '2' maxlength="80"></textarea>
-          <textarea class='carousel-button' maxlength="20">Pay For Order</textarea>
+        <div class="text-center">
+          <div class="purchase text-center">
+            <textarea class='purchase-prompt' placeholder='Ready to purchase?' rows= '2' maxlength="80"></textarea>
+            <textarea class='purchase-button' maxlength="20">Pay For Order</textarea>
+          </div>
         </div>
 
         <li>Post CTA</li>
@@ -224,8 +226,8 @@
       </div>
     </div>
 
-    <div class="row plain-text text-center">
-      <textarea class='plain-text-area' placeholder='Enter a message... (i.e. "Thanks for your order!"' rows= '2' maxlength="80"></textarea>
+    <div class="row plain-text">
+      <textarea class='plain-text-area' placeholder='Enter a message... (i.e. "Thanks for your signing up!"' rows= '2' maxlength="80"></textarea>
     </div>
   </div>
 
