--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
           <div class='business-name-header'>Acme Corp</div>
           <div class='call-to-action-image'></div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-subtitle' placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
@@ -80,33 +81,36 @@
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
       </ol>
@@ -129,12 +133,13 @@
           <div class='business-name-header'>Acme Corp</div>
           <div class='call-to-action-image'></div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-subtitle' placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         
@@ -144,33 +149,36 @@
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
