--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <li>Initial Message with CTA</li>
-        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy now!".</p>
+        <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Sign up now for a free quote!".</p>
         <div class='call-to-action-container'>
           <div class='business-name-header'>Acme Corp</div>
           <div class='call-to-action-image'></div>
@@ -74,8 +74,8 @@
           </div>
         </div>
 
-        <li>Message Carousel</li>
-        <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
+        <li>Service Description Carousel</li>
+        <p>Use a carousel of messages to describe what your business offers and give users the ability to learn more.</p>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
@@ -226,7 +226,7 @@
       </div>
     </div>
 
-    <div class="row plain-text">
+    <div class="row plain-text text-center">
       <textarea class='plain-text-area' placeholder='Enter a message... (i.e. "Thanks for your signing up!"' rows= '2' maxlength="80"></textarea>
     </div>
   </div>
