Fixed with subtitle

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
             <div class='carousel-image'></div>
             <div class ='carousel-title-encapsulate'>
               <textarea class='carousel-title' placeholder='Product Name (Quantity x Price)' rows= '1' maxlength="80"></textarea>
+              <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
             </div>
             <div class="carousel-button-encapsulate">
               <textarea class='carousel-button' maxlength="20">Remove From Cart</textarea>
@@ -224,7 +225,8 @@
       <div class='carousel-container'>
         <div class='carousel-image'></div>
         <div class ='carousel-title-encapsulate'>
-          <textarea class='carousel-title' placeholder='Enter a Heading' rows= '4' maxlength="80"></textarea>
+          <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+          <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
         </div>
         <div class="carousel-button-encapsulate">
           <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
