fix image upload styling

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Get a quote".</p>
         <div class='call-to-action-container'>
           <div class='business-name-header'>Acme Corp</div>
-          <div class='call-to-action-image' id='image-preview-1'>
-            <label for="image-upload" id="image-label-1">Upload Image</label>
-            <input type="file" name="image" id="image-upload-1" />
+          <div class='call-to-action-image image-preview' id='image-preview-1'>
+            <label for="image-upload" class='image-label' id="image-label-1">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-1" />
           </div>
           <div class ='call-to-action-title-encapsulate'>
             <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
@@ -162,9 +162,9 @@
         <li>Message Carousel</li>
         <p>Use a carousel of messages to provide your users with options and interactive buttons.</p>
         <div class='carousel-container'>
-          <div class='carousel-image' id='image-preview-1'>
-            <label for="image-upload" id="image-label-1">Upload Image</label>
-            <input type="file" name="image" id="image-upload-1" />
+          <div class='carousel-image image-preview' id='image-preview-1'>
+            <label for="image-upload" class='image-label' id="image-label-1">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-1" />
           </div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
@@ -177,9 +177,9 @@
           </div>
         </div>
         <div class='carousel-container'>
-          <div class='carousel-image' id='image-preview-2'>
-            <label for="image-upload" id="image-label-2">Upload Image</label>
-            <input type="file" name="image" id="image-upload-2" />
+          <div class='carousel-image image-preview' id='image-preview-2'>
+            <label for="image-upload" class='image-label' id="image-label-2">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-2" />
           </div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
@@ -192,9 +192,9 @@
           </div>
         </div>
         <div class='carousel-container'>
-          <div class='carousel-image' id='image-preview-3'>
-            <label for="image-upload" id="image-label-3">Upload Image</label>
-            <input type="file" name="image" id="image-upload-3" />
+          <div class='carousel-image image-preview' id='image-preview-3'>
+            <label for="image-upload" class='image-label' id="image-label-3">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-3" />
           </div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
