--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
           <div class='business-name-header'>Acme Corp</div>
           <div class='call-to-action-image'></div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
-            <textarea class='call-to-action-subtitle' placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-title' placeholder='Insert bold value proposition!' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-subtitle' placeholder='Enter one sentence description of service.' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' rows = "1" maxlength="20">Get a free quote</textarea>
             <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
             <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
@@ -80,11 +80,11 @@
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Service Feature #1' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Feature Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' rows = "1" maxlength="20">Learn More</textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
@@ -92,11 +92,11 @@
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Service Feature #2' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='Feature Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' rows = "1" maxlength="20">Learn More</textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
@@ -104,11 +104,11 @@
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Customer Reviews' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' placeholder='See what our customers have to say.' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' rows = "1" maxlength="20">Learn More</textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
@@ -135,12 +135,12 @@
           <div class='business-name-header'>Acme Corp</div>
           <div class='call-to-action-image'></div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
-            <textarea class='call-to-action-subtitle' placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-title' placeholder='Enter a Heading (Do you want to buy this?)' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-subtitle' placeholder='Product Description' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' rows = "1" maxlength="20">Shop Now!</textarea>
+            <textarea class='call-to-action-button' rows = "1" maxlength="20">Browse Hottest Pics</textarea>
             <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
@@ -150,36 +150,36 @@
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Product Title' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Product #1 Title' rows= '2' maxlength="80"></textarea>
             <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
             <textarea class='carousel-button' maxlength="20">Add To Cart</textarea>
-            <textarea class='carousel-button' maxlength="20">Similair Products</textarea>
+            <textarea class='carousel-button' maxlength="20">Similar Products</textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Product Title' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Product #2 Title' rows= '2' maxlength="80"></textarea>
             <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
             <textarea class='carousel-button' maxlength="20">Add To Cart</textarea>
-            <textarea class='carousel-button' maxlength="20">Similair Products</textarea>
+            <textarea class='carousel-button' maxlength="20">Similar Products</textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
           <div class='carousel-image'></div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Product Title' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' placeholder='Product Title #3' rows= '2' maxlength="80"></textarea>
             <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
             <textarea class='carousel-button' maxlength="20">Add To Cart</textarea>
-            <textarea class='carousel-button' maxlength="20">Similair Products</textarea>
+            <textarea class='carousel-button' maxlength="20">Similar Products</textarea>
             <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
@@ -190,8 +190,8 @@
           <div class='carousel-container'>
             <div class='carousel-image'></div>
             <div class ='carousel-title-encapsulate'>
-              <textarea class='carousel-title' placeholder='Product Name (Quantity x Price)' rows= '1' maxlength="80"></textarea>
-              <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
+              <textarea class='carousel-title' placeholder='Product Name' rows= '1' maxlength="80"></textarea>
+              <textarea class='carousel-subtitle' placeholder='Order Description (size, colour, etc)' rows= '2' maxlength="80"></textarea>
             </div>
             <div class="carousel-button-encapsulate">
               <textarea class='carousel-button' maxlength="20">Remove From Cart</textarea>
@@ -225,11 +225,11 @@
       <div class='carousel-container'>
         <div class='carousel-image'></div>
         <div class ='carousel-title-encapsulate'>
-          <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-          <textarea class='carousel-subtitle' placeholder='Product Description' rows= '2' maxlength="80"></textarea>
+          <textarea class='carousel-title' placeholder='Enter a Heading (i.e. "Thank you!")' rows= '2' maxlength="80"></textarea>
+          <textarea class='carousel-subtitle' placeholder='Description of next steps' rows= '2' maxlength="80"></textarea>
         </div>
         <div class="carousel-button-encapsulate">
-          <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
+          <textarea class='carousel-button' maxlength="20">Sign up for Newsletter</textarea>
           <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
           <textarea class='carousel-button' placeholder='Button Title' maxlength="20"></textarea>
         </div>
