--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-1" />
           </div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
-            <textarea class='call-to-action-subtitle' placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-title' data-limit-rows="true" placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
@@ -87,13 +87,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-2" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' data-limit-rows="true" placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
@@ -102,13 +102,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-3" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' data-limit-rows="true" placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
@@ -117,13 +117,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-4" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' data-limit-rows="true" placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
       </ol>
@@ -149,13 +149,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-1" />
           </div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
-            <textarea class='call-to-action-subtitle' placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-title' data-limit-rows="true" placeholder='Enter a Heading' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='call-to-action-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
@@ -167,13 +167,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-1" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' data-limit-rows="true" placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
@@ -182,13 +182,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-2" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' data-limit-rows="true" placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
@@ -197,13 +197,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-3" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' data-limit-rows="true" placeholder='Enter a Heading' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Enter a Subheading' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
